--- a/basics.ipynb
+++ b/basics.ipynb
@@ -1083,11 +1083,487 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "3e96361b-4835-4f88-8cd0-a7f16d5cc75b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['book', 99]\n"
+     ]
+    }
+   ],
+   "source": [
+    "stuff = list()\n",
+    "stuff.append('book')\n",
+    "stuff.append(99)\n",
+    "print(stuff)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "51333548-13f5-4a36-8a80-849404a56b16",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter the number:  10\n",
+      "Enter the number:  12\n",
+      "Enter the number:  13.9\n",
+      "Enter the number:  done\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "average: 11.966666666666667\n"
+     ]
+    }
+   ],
+   "source": [
+    "numlist = list()\n",
+    "while True:\n",
+    "    inp = input(\"Enter the number: \")\n",
+    "    if inp == 'done':\n",
+    "        break\n",
+    "    value = float(inp)\n",
+    "    numlist.append(value)\n",
+    "average= sum(numlist)/len(numlist)\n",
+    "print('average:',average)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "515a5ad4-b256-4998-912c-5c3d9705d349",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['With', 'three', 'words']\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "abc = 'With three words'\n",
+    "stuff = abc.split()\n",
+    "print(stuff)\n",
+    "print(len(stuff))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "bf6deeef-1a7a-477c-b98a-874e256912d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['first', 'second', 'third']\n"
+     ]
+    }
+   ],
+   "source": [
+    "line ='first;second;third'\n",
+    "thing = line.split(';')\n",
+    "print(thing)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "362aa79b-a86b-41ba-a393-09f8f141f86b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "stephen.marquard@uct.ac.za\n",
+      "stephen.marquard@uct.ac.za\n",
+      "louis@media.berkeley.edu\n",
+      "louis@media.berkeley.edu\n",
+      "zqian@umich.edu\n",
+      "zqian@umich.edu\n",
+      "rjlowe@iupui.edu\n",
+      "rjlowe@iupui.edu\n",
+      "zqian@umich.edu\n",
+      "zqian@umich.edu\n",
+      "rjlowe@iupui.edu\n",
+      "rjlowe@iupui.edu\n",
+      "cwen@iupui.edu\n",
+      "cwen@iupui.edu\n",
+      "cwen@iupui.edu\n",
+      "cwen@iupui.edu\n",
+      "gsilver@umich.edu\n",
+      "gsilver@umich.edu\n",
+      "gsilver@umich.edu\n",
+      "gsilver@umich.edu\n",
+      "zqian@umich.edu\n",
+      "zqian@umich.edu\n",
+      "gsilver@umich.edu\n",
+      "gsilver@umich.edu\n",
+      "wagnermr@iupui.edu\n",
+      "wagnermr@iupui.edu\n",
+      "zqian@umich.edu\n",
+      "zqian@umich.edu\n",
+      "antranig@caret.cam.ac.uk\n",
+      "antranig@caret.cam.ac.uk\n",
+      "gopal.ramasammycook@gmail.com\n",
+      "gopal.ramasammycook@gmail.com\n",
+      "david.horwitz@uct.ac.za\n",
+      "david.horwitz@uct.ac.za\n",
+      "david.horwitz@uct.ac.za\n",
+      "david.horwitz@uct.ac.za\n",
+      "david.horwitz@uct.ac.za\n",
+      "david.horwitz@uct.ac.za\n",
+      "david.horwitz@uct.ac.za\n",
+      "david.horwitz@uct.ac.za\n",
+      "stephen.marquard@uct.ac.za\n",
+      "stephen.marquard@uct.ac.za\n",
+      "louis@media.berkeley.edu\n",
+      "louis@media.berkeley.edu\n",
+      "louis@media.berkeley.edu\n",
+      "louis@media.berkeley.edu\n",
+      "ray@media.berkeley.edu\n",
+      "ray@media.berkeley.edu\n",
+      "cwen@iupui.edu\n",
+      "cwen@iupui.edu\n",
+      "cwen@iupui.edu\n",
+      "cwen@iupui.edu\n",
+      "cwen@iupui.edu\n",
+      "cwen@iupui.edu\n"
+     ]
+    }
+   ],
+   "source": [
+    "fhand = open('mbox.txt')\n",
+    "for line in fhand:\n",
+    "    line = line.rstrip()\n",
+    "    if not line.startswith('From'):\n",
+    "        continue\n",
+    "    words = line.split()\n",
+    "    print(words[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "250a1cb1-bab8-4976-8949-7e6fb80764d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "uct.ac.za\n",
+      "uct.ac.za\n",
+      "media.berkeley.edu\n",
+      "media.berkeley.edu\n",
+      "umich.edu\n",
+      "umich.edu\n",
+      "iupui.edu\n",
+      "iupui.edu\n",
+      "umich.edu\n",
+      "umich.edu\n",
+      "iupui.edu\n",
+      "iupui.edu\n",
+      "iupui.edu\n",
+      "iupui.edu\n",
+      "iupui.edu\n",
+      "iupui.edu\n",
+      "umich.edu\n",
+      "umich.edu\n",
+      "umich.edu\n",
+      "umich.edu\n",
+      "umich.edu\n",
+      "umich.edu\n",
+      "umich.edu\n",
+      "umich.edu\n",
+      "iupui.edu\n",
+      "iupui.edu\n",
+      "umich.edu\n",
+      "umich.edu\n",
+      "caret.cam.ac.uk\n",
+      "caret.cam.ac.uk\n",
+      "gmail.com\n",
+      "gmail.com\n",
+      "uct.ac.za\n",
+      "uct.ac.za\n",
+      "uct.ac.za\n",
+      "uct.ac.za\n",
+      "uct.ac.za\n",
+      "uct.ac.za\n",
+      "uct.ac.za\n",
+      "uct.ac.za\n",
+      "uct.ac.za\n",
+      "uct.ac.za\n",
+      "media.berkeley.edu\n",
+      "media.berkeley.edu\n",
+      "media.berkeley.edu\n",
+      "media.berkeley.edu\n",
+      "media.berkeley.edu\n",
+      "media.berkeley.edu\n",
+      "iupui.edu\n",
+      "iupui.edu\n",
+      "iupui.edu\n",
+      "iupui.edu\n",
+      "iupui.edu\n",
+      "iupui.edu\n"
+     ]
+    }
+   ],
+   "source": [
+    "fhand = open('mbox.txt')\n",
+    "for line in fhand:\n",
+    "    line = line.rstrip()\n",
+    "    if not line.startswith('From'):\n",
+    "        continue\n",
+    "    words = line.split()\n",
+    "    email=words[1]\n",
+    "    peice = email.split('@')\n",
+    "    print(peice[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "52ef63df-c3b8-484a-8f5a-874e34011ec6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x= list(range(5))\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "8c939c76-9000-4e72-b88b-12b575d351c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['grief', 'grief', 'grief', 'grief', 'grief', 'grief', 'grief', 'grief', 'grief', 'grief', 'grief', 'grief', 'grief', 'grief', 'grief', 'grief', 'grief', 'grief', 'grief', 'grief', 'grief', 'grief', 'grief', 'grief', 'grief', 'grief', 'grief', 'grief', 'grief', 'grief', 'grief', 'grief']\n"
+     ]
+    }
+   ],
+   "source": [
+    "fname = open('romeo.txt')\n",
+    "my_list =[]\n",
+    "\n",
+    "for line in fname:\n",
+    "    line=line.rstrip()\n",
+    "    word=line.split()\n",
+    "    \n",
+    "    for words in word:\n",
+    "        if words.lower() not in my_list:\n",
+    "            my_list.append(p)\n",
+    "print(my_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "199871f4-e9cd-47be-b1eb-254a9193e1c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Arise', 'But', 'It', 'Juliet', 'Who', 'already', 'and', 'breaks', 'east', 'envious', 'fair', 'grief', 'is', 'kill', 'light', 'moon', 'pale', 'sick', 'soft', 'sun', 'the', 'through', 'what', 'window', 'with', 'yonder']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Input multiline string\n",
+    "mystr = '''But soft what light through yonder window breaks\n",
+    "It is the east and Juliet is the sun\n",
+    "Arise fair sun and kill the envious moon\n",
+    "Who is already sick and pale with grief'''\n",
+    "\n",
+    "# Initialize an empty list to store unique words\n",
+    "unique_words = []\n",
+    "\n",
+    "# Iterate through each line in the string\n",
+    "for line in mystr.split('\\n'):\n",
+    "    # Split the line into words\n",
+    "    words = line.split()\n",
+    "    \n",
+    "    # For each word, check if it's not in the list and then append it\n",
+    "    for word in words:\n",
+    "        if word.lower() not in [w.lower() for w in unique_words]:  # case insensitive check\n",
+    "            unique_words.append(word)\n",
+    "\n",
+    "# Sort the list of words\n",
+    "unique_words.sort()\n",
+    "\n",
+    "# Print the sorted list of unique words\n",
+    "print(unique_words)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "f4b7d228-d125-4ab5-ab65-7d933f9f8c82",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sat\n",
+      "Fri\n",
+      "Fri\n",
+      "Fri\n",
+      "Fri\n",
+      "Fri\n",
+      "Fri\n",
+      "Fri\n",
+      "Fri\n",
+      "Fri\n",
+      "Fri\n",
+      "Fri\n",
+      "Fri\n",
+      "Fri\n",
+      "Fri\n",
+      "Fri\n",
+      "Fri\n",
+      "Fri\n",
+      "Fri\n",
+      "Fri\n",
+      "Fri\n",
+      "Thu\n",
+      "Thu\n",
+      "Thu\n",
+      "Thu\n",
+      "Thu\n",
+      "Thu\n"
+     ]
+    }
+   ],
+   "source": [
+    "fhand = open('mbox.txt')\n",
+    "\n",
+    "for line in fhand:\n",
+    "    line = line.rstrip()\n",
+    "    wds = line.split()\n",
+    "    if len(wds) <3:\n",
+    "        continue\n",
+    "    if wds[0] != 'From':\n",
+    "        continue\n",
+    "    print(wds[2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "f33020fe-d282-4d21-a6c5-faaef0470046",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "stephen.marquard@uct.ac.za\n",
+      "louis@media.berkeley.edu\n",
+      "zqian@umich.edu\n",
+      "rjlowe@iupui.edu\n",
+      "zqian@umich.edu\n",
+      "rjlowe@iupui.edu\n",
+      "cwen@iupui.edu\n",
+      "cwen@iupui.edu\n",
+      "gsilver@umich.edu\n",
+      "gsilver@umich.edu\n",
+      "zqian@umich.edu\n",
+      "gsilver@umich.edu\n",
+      "wagnermr@iupui.edu\n",
+      "zqian@umich.edu\n",
+      "antranig@caret.cam.ac.uk\n",
+      "gopal.ramasammycook@gmail.com\n",
+      "david.horwitz@uct.ac.za\n",
+      "david.horwitz@uct.ac.za\n",
+      "david.horwitz@uct.ac.za\n",
+      "david.horwitz@uct.ac.za\n",
+      "stephen.marquard@uct.ac.za\n",
+      "louis@media.berkeley.edu\n",
+      "louis@media.berkeley.edu\n",
+      "ray@media.berkeley.edu\n",
+      "cwen@iupui.edu\n",
+      "cwen@iupui.edu\n",
+      "cwen@iupui.edu\n",
+      "27\n"
+     ]
+    }
+   ],
+   "source": [
+    "fhand = open('mbox.txt')\n",
+    "count = 0\n",
+    "\n",
+    "for line in fhand:\n",
+    "    line = line.strip()\n",
+    "    wds = line.split()\n",
+    "    if len(wds) <3 or wds[0] != 'From':\n",
+    "        continue\n",
+    "    count = count +1\n",
+    "    print(wds[1])\n",
+    "print(count)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "f7a33451-6d3f-4bcc-9c5d-43ea45fa3be2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Arise', 'But', 'It', 'Juliet', 'Who', 'already', 'and', 'breaks', 'east', 'envious', 'fair', 'grief', 'is', 'kill', 'light', 'moon', 'pale', 'sick', 'soft', 'sun', 'the', 'through', 'what', 'window', 'with', 'yonder']\n"
+     ]
+    }
+   ],
+   "source": [
+    "fhand1 = open('romeo.txt')\n",
+    "mylist = []\n",
+    "unique_words=[]\n",
+    "for line in fhand1:\n",
+    "    line = line.strip()\n",
+    "    wds = line.split()\n",
+    "    for eachword in wds:\n",
+    "        if eachword not in wds:\n",
+    "            continue\n",
+    "        mylist.append(eachword)\n",
+    "    for word in mylist:\n",
+    "        if word not in unique_words:\n",
+    "            unique_words.append(word)\n",
+    "unique_words.sort()\n",
+    "print(unique_words)\n"
+   ]
   }
  ],
  "metadata": {
