--- a/basics.ipynb
+++ b/basics.ipynb
@@ -1473,6 +1473,24 @@
     "unique_words.sort()\n",
     "print(unique_words)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "83f6b922-3dee-447a-9c42-4dcaffc230d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('x')"
+   ]
   }
  ],
  "metadata": {
